# python-troveclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  run_local.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  pydocs.rst  usage.rst
doc/source/cli/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
docs/: conf.py
docs/source/: conf.py  pydocs.rst  usage.rst
playbooks/legacy/tempest-dsvm-neutron-src-python-troveclient/: run.yaml
reddwarfclient/: __init__.py  accounts.py  auth.py  backups.py  base.py  cli.py  client.py  common.py  config.py  databases.py  diagnostics.py  exceptions.py  flavors.py  hosts.py  instances.py  limits.py  management.py  mcli.py  quota.py  root.py  security_groups.py  storage.py  users.py  utils.py  versions.py  xml.py
reddwarfclient/tests/: test_auth.py  test_base.py  test_client.py  test_common.py  test_instances.py  test_management.py  test_secgroups.py  test_users.py  test_utils.py
releasenotes/notes/: add-backup-create-to-osc-c3d257365cf65cae.yaml  add-backup-delete-to-osc-e302b87809cb814c.yaml  add-backup-list-instance-to-osc-e01cf8527e499768.yaml  add-backup-list-to-osc-ea5cbfb579f3ffc7.yaml  add-backup-show-to-osc-022f42ad93136ce6.yaml  add-cluster-create-to-osc-47e3bb3a83dcab76.yaml  add-cluster-delete-to-osc-9601c8bc0e637c4b.yaml  add-cluster-grow-shrink-to-osc-a07bc0d974b0c0a4.yaml  add-cluster-instances-to-osc-429eeb91d86da663.yaml  add-cluster-list-to-osc-93532b79db906a14.yaml  add-cluster-modules-to-osc-647a0564dafcef24.yaml  add-cluster-show-to-osc-5925431f5e94a746.yaml  add-configuration-attach-detach-to-osc-c5b52784910f2b09.yaml  add-configuration-create-to-osc-fd556891b57cce05.yaml  add-configuration-default-to-osc-55867236d19d83c4.yaml  add-configuration-delete-to-osc-d52e6a2cc84994e5.yaml  add-configuration-groups-for-clusters-6183b0b7b4fb8c9e.yaml  add-configuration-instances-to-osc-80a7d7b9d0c79f62.yaml  add-configuration-list-to-osc-4a12d508f6bb5472.yaml  add-configuration-parameter-list-to-osc-3d1a383999dd2d64.yaml  add-configuration-parameter-show-to-osc-5bcf21662683ceee.yaml  add-configuration-show-to-osc-c139bb20a2ec18ec.yaml  add-database-create-to-osc-b9e85dd2cbd9b21e.yaml  add-database-delete-to-osc-e6703e2d438824d1.yaml  add-database-list-to-osc-b547e8954e8b6fc7.yaml  add-datastore-list-to-osc-007ff4144f630c57.yaml  add-datastore-show-to-osc-79a855d2e026ae80.yaml  add-datastore-version-list-to-osc-3fe8729d493f3de2.yaml  add-datastore-version-show-to-osc-8c2035dbf6104a9f.yaml  add-detach-replica-to-osc-1fadef6220e96f35.yaml  add-eject-replica-source-to-osc-c985a70eaab3f16b.yaml  add-execution-delete-to-osc-013b4bf00a1cb8ff.yaml  add-flavor-list-to-osc-b8b3a42f3bae3851.yaml  add-flavor-show-to-osc-16ab5640f144cab7.yaml  add-force-delete-to-osc-dfff1db4da937415.yaml  add-instance-create-to-osc-77484f1c477aa864.yaml  add-instance-delete-to-osc-bf8de501c8945d58.yaml  add-instance-detailed-list-23dc77ed898cc6db.yaml  add-instance-list-to-osc-05714dfce947a57e.yaml  add-instance-show-to-osc-d97cac1c697dcbdd.yaml  (+75 more)
releasenotes/source/: conf.py  index.rst
tests/: test_accounts.py  test_auth.py  test_base.py  test_common.py  test_limits.py  test_management.py  test_secgroups.py  test_users.py  test_utils.py  test_xml.py
tools/: install_venv_common.py  pip-requires  test-requires  tox_install.sh
troveclient/: __init__.py  _i18n.py  accounts.py  auth.py  auth_plugin.py  backups.py  base.py  cli.py  client.py  common.py  databases.py  diagnostics.py  exceptions.py  flavors.py  hosts.py  i18n.py  instances.py  limits.py  management.py  mcli.py  quota.py  root.py  security_groups.py  service_catalog.py  shell.py  storage.py  users.py  utils.py  versions.py  xml.py
troveclient/apiclient/: auth.py  base.py  client.py  exceptions.py
troveclient/compat/: __init__.py  auth.py  base.py  cli.py  client.py  common.py  exceptions.py  mcli.py  utils.py  versions.py  xml.py
troveclient/compat/tests/: test_auth.py  test_common.py  test_xml.py
troveclient/openstack/common/: gettextutils.py  strutils.py
troveclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
troveclient/osc/: plugin.py
troveclient/osc/v1/: base.py  database_backup_strategy.py  database_backups.py  database_clusters.py  database_configurations.py  database_flavors.py  database_instances.py  database_limits.py  database_logs.py  database_quota.py  database_root.py  database_users.py  databases.py  datastores.py
troveclient/tests/: __init__.py  fakes.py  test_accounts.py  test_apiclient_exceptions.py  test_auth.py  test_backups.py  test_base.py  test_client.py  test_clusters.py  test_common.py  test_configurations.py  test_databases.py  test_datastores.py  test_discover.py  test_instances.py  test_limits.py  test_management.py  test_metadata.py  test_modules.py  test_root.py  test_secgroups.py  test_shell.py  test_users.py  test_utils.py  test_v1_shell.py  test_xml.py  utils.py
troveclient/tests/osc/: fakes.py  utils.py
troveclient/tests/osc/v1/: fakes.py  test_database_backup_strategy.py  test_database_backups.py  test_database_clusters.py  test_database_configurations.py  test_database_flavors.py  test_database_instances.py  test_database_limits.py  test_database_logs.py  test_database_quota.py  test_database_root.py  test_database_users.py  test_databases.py  test_datastores.py
troveclient/v1/: __init__.py  accounts.py  backup_strategy.py  backups.py  client.py  clusters.py  configurations.py  databases.py  datastores.py  diagnostics.py  flavors.py  hosts.py  instances.py  limits.py  management.py  metadata.py  modules.py  quota.py  root.py  security_groups.py  shell.py  storage.py  users.py  volume_types.py
