[metadata]
name = python-troveclient
summary = Client library for OpenStack DBaaS API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-troveclient/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    troveclient

[entry_points]
console_scripts =
    trove = troveclient.shell:main

openstack.cli.extension =
    database = troveclient.osc.plugin

openstack.database.v1 =
    database_backup_list = troveclient.osc.v1.database_backups:ListDatabaseBackups
    database_cluster_list = troveclient.osc.v1.database_clusters:ListDatabaseClusters
    database_configuration_list = troveclient.osc.v1.database_configurations:ListDatabaseConfigurations
    database_flavor_list = troveclient.osc.v1.database_flavors:ListDatabaseFlavors
    database_instance_list = troveclient.osc.v1.database_instances:ListDatabaseInstances
    database_limit_list = troveclient.osc.v1.database_limits:ListDatabaseLimits
    database_list = troveclient.osc.v1.databases:ListDatabases
    database_user_list = troveclient.osc.v1.database_users:ListDatabaseUsers
    datastore_list = troveclient.osc.v1.datastores:ListDatastores


[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
api_doc_dir = reference/api
autodoc_exclude_modules =
  troveclient.tests.*
